--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="www.facebook.com/v0idgy"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="www.twitter.com/v0idgy"><i class="lni-twitter-original"></i></a></li>
+                                    <li><a href="https://www.facebook.com/v0idgy"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="https://www.twitter.com/v0idgy"><i class="lni-twitter-original"></i></a></li>
                                    
-                                    <li><a href="www.linkedin.com/in/v0idgy"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/v0idgy"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div> <!-- header social -->
                         </div>
