--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
-                        <h5 class="about-title">Hi There! I'm Mark Parker</h5>
+                        <h5 class="about-title">Hi There! I'm Gourav Yadav</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         <ul class="clearfix">
                             <li>
@@ -182,7 +182,7 @@
                                         <i class="lni-calendar"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Date of birth:</span> 8 June 1995</p>
+                                        <p><span>Date of birth:</span> 12 March 2000</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -192,7 +192,7 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span> parker@mysite.com</p>
+                                        <p><span>Email:</span> gouravy1203@gmail.com</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -202,7 +202,7 @@
                                         <i class="lni-phone-handset"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Phone:</span> +1-202-555-0138</p>
+                                        <p><span>Phone:</span> +919568869601</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -212,7 +212,7 @@
                                         <i class="lni-map-marker"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Location:</span> 4373, El Centro, CA</p>
+                                        <p><span>Location:</span> Khandari, Agra</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
