--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Address</h6>
-                            <p>123 Stree New York City , United States Of America 750</p>
+                            <p>Khandari, Agra</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -708,8 +708,8 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Phone</h6>
-                            <p>+931 2222 5555</p>
-                            <p>+547 5554 6663</p>
+                            
+                            <p>+91-9568869601</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -720,8 +720,8 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Email</h6>
-                            <p>support@yourmail.com</p>
-                            <p>info@helpline.com</p>
+                            <p>gouravy1203@gmail.com</p>
+                            
                         </div>
                     </div> <!-- contact box -->
                 </div>
