--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         </div> <!-- skill item -->
                         <div class="skill-item mt-25">
                             <div class="skill-header">
-                                <h6 class="skill-title">Photoshop</h6>
+                                <h6 class="skill-title">C++</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
                                         <span class="counter">50</span>
@@ -271,7 +271,7 @@
                         </div> <!-- skill item -->
                         <div class="skill-item mt-25">
                             <div class="skill-header">
-                                <h6 class="skill-title">Sketch</h6>
+                                <h6 class="skill-title">Python</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
                                         <span class="counter">90</span>
