--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item active"><a class="page-scroll" href="#home">Home</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
-                                    <li class="nav-item"><a class="page-scroll" href="#service">Services</a></li>
+                                 <!--  <li class="nav-item"><a class="page-scroll" href="#service">Services</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#work">Portfolio</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#blog">Blog</a></li>
-                                    <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
+                                    <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>-->
                                 </ul>
                             </div> <!-- navbar collapse -->
                         </nav> <!-- navbar -->
@@ -166,7 +166,7 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center">
                         <h2 class="title">About Me</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <p></p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -174,7 +174,7 @@
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
                         <h5 class="about-title">Hi There! I'm Gourav Yadav</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p></p>
                         <ul class="clearfix">
                             <li>
                                 <div class="single-info d-flex align-items-center">
@@ -304,7 +304,7 @@
                             <a href="index.html">
                                 <img src="assets/images/logo.png" alt="Logo">
                             </a>
-                            <p class="mt-">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="mt-">.</p>
                             <ul>
                                 <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
                                 <li><a href="#"><i class="lni-twitter-original"></i></a></li>
@@ -317,7 +317,7 @@
             </div> <!-- container -->
 
         </div> 
--->        <div class="footer-copyright pb-20">
+        <div class="footer-copyright pb-20">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
