--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello, I’m</h4>
                             <h1 class="title">Gourav Yadav</h1>
-                            <p>A Web Developer, Pythonist, </p>
+                            <p>A Web Developer, Pythonist. </p>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
