--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
                             </a>
                             <p class="mt-">.</p>
                             <ul>
-                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="#"><i class="lni-pinterest"></i></a></li>
-                                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                <li><a href="https://www.facebook.com/v0idgy"><i class="lni-facebook-filled"></i></a></li>
+                                <li><a href="https://www.twitter.com/v0idgy"><i class="lni-twitter-original"></i></a></li>
+                                
+                                <li><a href="https://www.linkedin.com/in/v0idgy"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
                     </div>
