--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
+                            <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL"
+                                data-vanity="v0idgy" data-version="v1"><a class="badge-base__link LI-simple-link"
+                                    href="https://in.linkedin.com/in/v0idgy?trk=profile-badge">Gourav Yadav</a></div>
                             <a class="navbar-brand" href="index.html">
                                 <img src="assets/images/logo.png" alt="Logo">
                             </a> <!-- Logo -->
@@ -341,7 +344,7 @@
 
 
 
-
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
 
     <!--====== jquery js ======-->
