--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="header-shape shape-ten layer" data-depth="0.30">
                 <img src="assets/images/banner/shape/shape-3.png" alt="Shape">
             </div> <!-- header shape -->
-            <div class="container">
+            <div class="container"><br><br><br>
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
@@ -133,12 +133,12 @@
                     </div>
                     <div class="col-lg-6 offset-xl-1">
                         <div>
-                       
+                           <div>
                             <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL"
                                 data-vanity="v0idgy" data-version="v1"><a class="badge-base__link LI-simple-link"
                                     href="https://in.linkedin.com/in/v0idgy?trk=profile-badge"></a></div>
                            </div> <!--<img src="assets/images/Gourav.png" alt="hero"> -->
-                         <!-- header image -->
+                         </div><!-- header image -->
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
