--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="container"><br><br><br>
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6">
-                        <div class="header-content-right"><br><br>
+                        <div class="header-content-right"><br>
                         
                             <h4 class="sub-title">Hello, I’m</h4>
                             <h1 class="title">Gourav Yadav</h1>
