--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="header-shape shape-ten layer" data-depth="0.30">
                 <img src="assets/images/banner/shape/shape-3.png" alt="Shape">
             </div> <!-- header shape -->
-            <div class="container"><br><br><br>
+            <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right"><br>
