--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span> gouravy1203@gmail.com</p>
+                                        <p><span>Email:</span><a href="gouravy1203@gmail.com" gouravy1203@gmail.com </a></p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
