--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span><a href="gouravy1203@gmail.com" gouravy1203@gmail.com </a></p>
+                                        <p><span>Email:</span><a href=mailto:"gouravy1203@gmail.com" gouravy1203@gmail.com </a></p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -208,7 +208,7 @@
                                         <i class="lni-phone-handset"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Phone:</span> +919568869601</p>
+                                        <p><span>Phone:</span><a href="tel:+919568869601"> +919568869601</a></p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
