--- a/index.html
+++ b/index.html
@@ -198,7 +198,11 @@
                                         <i class="lni-envelope"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Email:</span> gouravy1203@gmail.com</p>
+                                        <p><span>
+                                            Email:
+                                            </span>
+                                            gouravy1203@gmail.com
+                                        </p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -208,7 +212,11 @@
                                         <i class="lni-phone-handset"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Phone:</span><a href="tel:+919568869601"> +919568869601</a></p>
+                                        <p><span>Phone:</span>
+                                            <a href="tel:+919568869601">
+                                                +919568869601
+                                            </a>
+                                        </p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
