--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
                                         <p><span>
                                             Email:
                                             </span>
+                                            <a href="mailto:gouravy1203@gmail.com">
                                             gouravy1203@gmail.com
+                                            </a>
                                         </p>
                                     </div>
                                 </div> <!-- single info -->
